--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,3 +1,3 @@
 [float]
-TweetWallFX image:https://travis-ci.org/JUGBodensee/TweetwallFX.svg?branch=master[Build Status,link=https://travis-ci.org/JUGBodensee/TweetwallFX]
+TweetWallFX image:https://travis-ci.org/TweetWallFX/TweetwallFX.svg?branch=master["Build Status", link="https://travis-ci.org/TweetWallFX/TweetwallFX"]
 ==================================================================================================================================================
