--- a/README.adoc
+++ b/README.adoc
@@ -19,10 +19,10 @@ Update the `tweetwallConfig.json` file with your OAuth values as follows:
     "twitter" : {
         "extendedMode" : true,
         "oauth" : {
-            "consumerKey" : "v8SvGzboGrvU148cKs8PghI1v", <1>
-            "consumerSecret" : "12w6vg612hgvoGk0iysMlLvKfh0ouMcVg00RWG8rV6jccZ8RUg", <2>
-            "accessToken" : "12cF34j9-cF3cGz819x4j2iQ6Vgh4wqmLqksxHzRFt78D3WKiB", <3>
-            "accessTokenSecret" : "2DghUiSB5hdg7jFbNKHqx5xRkXNZhnzZtICUPG7Bz92x4" <4>
+            "consumerKey" : "v8SvGzboGrvU148cKs8PghI1v", // <1>
+            "consumerSecret" : "12w6vg612hgvoGk0iysMlLvKfh0ouMcVg00RWG8rV6jccZ8RUg", // <2>
+            "accessToken" : "12cF34j9-cF3cGz819x4j2iQ6Vgh4wqmLqksxHzRFt78D3WKiB", // <3>
+            "accessTokenSecret" : "2DghUiSB5hdg7jFbNKHqx5xRkXNZhnzZtICUPG7Bz92x4" // <4>
         }
     },
     "tweetwall" : {
