--- a/README.adoc
+++ b/README.adoc
@@ -30,6 +30,7 @@
 
 image:https://img.shields.io/badge/license-MIT-blue.svg["MIT License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
 image:https://img.shields.io/travis/{project-full-path}/{github-branch}.svg["Build Status", link="https://travis-ci.org/{project-full-path}"]
+image:https://api.bintray.com/packages/tweetwallfx-team/maven/org.tweetwallfx/images/download.svg[link="https://bintray.com/tweetwallfx-team/maven/org.tweetwallfx/_latestVersion"]
 
 ## Getting OAuth keys
 
