--- a/README.adoc
+++ b/README.adoc
@@ -29,7 +29,7 @@
 :github-branch: master
 
 image:https://img.shields.io/badge/license-MIT-blue.svg["MIT License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
-image:https://github.com/TweetWallFX/TweetwallFX/actions/workflows/gradleBuild.yml/badge.svg?branch={github-branch}[Gradle Build, link="https://github.com/TweetWallFX/TweetwallFX/actions/workflows/gradleBuild.yml"]
+image:https://github.com/{project-full-path}/actions/workflows/gradleBuild.yml/badge.svg?branch={github-branch}[Gradle Build, link="https://github.com/{project-full-path}/actions/workflows/gradleBuild.yml"]
 
 ## Getting OAuth keys
 
